Fix bug where arrow is still showing on mobile

--- a/franchises/dfv/src/modules/homepage-cards/css/global.scss
+++ b/franchises/dfv/src/modules/homepage-cards/css/global.scss
@@ -29,7 +29,6 @@ $card-arrow-border: 0.2rem;
         width: pxToRem(30);
         height: pxToRem(30);
         position: relative;
-        display: block;
 
         &:after,
         &:before {
